<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorTag Log</string>
    <string name="humidity">Humidity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ble_not_supported">Bluetooth Low Energy is not supported!</string>
    <string name="enable_ble">Please enable Bluetooth</string>
    <string name="devices_found_name">Devices discovered:</string>
    <string name="action_scan">Scan</string>
    <string name="action_data">Data</string>
    <string name="select_device_to_connect">Scan and select a device to connect:</string>
    <string name="select_sensor">Select sensor:</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="plot_button">View Recordings</string>
    <string name="record_button">Start Recording</string>
    <string name="select_rec_to_plot">Select a recording, one sensor and data to plot:</string>
    <string name="action_plot">Plot</string>
    <string name="action_classify">Classify</string>
    <string name="title_classify">Classification Results</string>
    <string name="correct_walk">Walking correct: </string>
    <string name="correct_run">Running correct: </string>
    <string name="correct_jump">Jumping correct: </string>
    <string name="overall_accuracy">Overall Accuracy: </string>
    <string name="sensor_acc">Sensor: accelerometer</string>
</resources>
