<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/select_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_sensor"
        android:textSize="12sp"
        style="?android:listSeparatorTextViewStyle"/>


    <TextView
        android:id = "@+id/accelerometer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/accelerometer"
        android:padding="3dp"
        android:textSize="20sp" />


    <TextView
        android:id = "@+id/accelerometer_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:paddingBottom="10dp"
        android:gravity="center"/>


    <TextView
        android:id = "@+id/gyro_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/gyroscope"
        android:textSize="20sp"
        android:padding="3dp" />


    <TextView
        android:id = "@+id/gyro_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:paddingBottom="10dp"
        android:gravity="center"/>


    <TextView
        android:id = "@+id/mag_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/magnetometer"
        android:textSize="20sp"
        android:padding="3dp"/>


    <TextView
        android:id = "@+id/mag_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingBottom="10dp"
        android:gravity="center"/>


    <Button
        android:id = "@+id/record_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_button"
        android:padding="10dp" />


    <Button
        android:id = "@+id/plot_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/plot_button"
        android:padding="10dp" />


</LinearLayout>
