<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClassifyActivity">

    <TextView
        android:id="@+id/classify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_classify"
        android:textSize="12sp"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:id = "@+id/sensor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/sensor_acc"
        android:layout_gravity="center"
        android:padding="3dp"
        android:textSize="20sp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id = "@+id/correct_walking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/correct_walk"
        android:padding="3dp"
        android:textSize="20sp" />

    <TextView
        android:id = "@+id/true_walking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textSize="20sp" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id = "@+id/correct_running"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/correct_run"
        android:padding="3dp"
        android:textSize="20sp" />

        <TextView
            android:id = "@+id/true_running"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id = "@+id/correct_jumping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/correct_jump"
        android:padding="3dp"
        android:textSize="20sp" />

        <TextView
            android:id = "@+id/true_jumping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id = "@+id/overall_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/overall_accuracy"
        android:padding="3dp"
        android:textSize="20sp" />

        <TextView
            android:id = "@+id/true_overall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>

